      directory in 'runtimepath' rather than 'plugin/'.
    * IMPORTANT: Option value quoting has changed. List options will
      no longer be split at quoted commas and the option name,
      operators, and = sign may no longer be quoted. This will break
      certain automatically-generated configuration files.
      See :help stringlist
    * Option changes:
      - Added "bookmarks", "diverted", and "links" to 'activate'
        option.
      - Added 'altwildmode' and <A-Tab> command-line key binding.
      - Added 'autocomplete' option for specifying which completion
        groups should be auto-completed.
      - Added 'banghist' option.
      - Replaced 'focuscontent' with 'strictfocus'.
      - 'complete' now defaults to "slf" but file completion only
        triggers when the URL begins as above.
      - Added 'passkeys' option.
      - Changed 'urlseparator' default value to '|'.
      - Added "passwords" and "venkman" dialogs to :dialog.
      - Added 'wildanchor' option.
      - Added 'cookies', 'cookieaccept', and 'cookielifetime' options.
    * Added BookmarkChange, BookmarkRemove autocommands.
    * Removed the :source line at the end of files generated by
      :mkpentadactylrc.
    * gf now toggles between source and content view.
      The | key binding has been removed.
    * Page zoom information is now shown in the status bar, and
      change in zoom status no longer appears in :messages.
    * Added ZO, ZI, ZM, and ZR as aliases for zO, zI, zM, and zR.
    * Completion list now behaves better when the multi-line output
      window is displayed.
    * Major help system improvements:
      - Plugins may now provide full-fledged ':help' documentation.
      - Add basic plugin authorship documentation.
      - The help system is newly modularized and features significant
        updates, rewrites, and formatting improvements.
    * Removed :beep.
    * Removed :edit, :tabedit, and :winedit aliases.
    * Removed :play.
