@@ -301,8 +301,9 @@
 </item>
 
 <item>
-    <tags>:helpall :helpa help-all</tags>
+    <tags><![CDATA[<A-F1> :helpall :helpa help-all]]></tags>
     <spec>:helpa<oa>ll</oa> <oa>subject</oa></spec>
+    <spec>&lt;A-F1></spec>
     <description>
         <p>Open all help pages coalesced into a single page.</p>
 
